# nautilus-extensions

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_IT.md  LICENSE  Makefile  README.md  README_EN.md  README_IT.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: SCREENSHOT_GUIDE.md
csv-preview/: README.md  README_EN.md  README_IT.md  csv_preview.py
dockerfile-analyzer/: README.md  README_EN.md  README_IT.md  dockerfile_analyzer.py
duplicate-finder/: README.md  README_EN.md  README_IT.md  duplicate-finder.py  duplicate_finder.py
excel-preview/: README.md  README_EN.md  README_IT.md  excel_preview.py
git-blame/: README.md  README_IT.md  git_blame.py
git-diff/: README.md  README_IT.md  git_diff.py
git-graph/: README.md  README_IT.md  git_graph.py
git-status/: README.md  README_IT.md  git_status.py
json-preview/: README.md  README_EN.md  README_IT.md  json_preview.py
parquet-preview/: README.md  README_EN.md  README_IT.md  parquet_preview.py
pdf-merger/: README.md  README_EN.md  README_IT.md  pdf_merger.py
pdf-splitter/: README.md  README_EN.md  README_IT.md  pdf_splitter.py
readme-viewer/: README.md  README_EN.md  README_IT.md  readme_preview.py
tests/: conftest.py  test_conftest.py  test_csv_preview.py  test_dockerfile_analyzer.py  test_duplicate_finder.py  test_excel_preview.py  test_git_blame.py  test_git_diff.py  test_git_graph.py  test_git_status.py  test_json_preview.py  test_parquet_preview.py  test_pdf_merger.py  test_pdf_splitter.py  test_readme_viewer.py
